--- a/ui_camera_viewer.ui
+++ b/ui_camera_viewer.ui
@@ -16,33 +16,33 @@
   <widget class="QLineEdit" name="input_scale">
    <property name="geometry">
     <rect>
-     <x>780</x>
-     <y>250</y>
+     <x>770</x>
+     <y>100</y>
      <width>131</width>
      <height>41</height>
     </rect>
    </property>
   </widget>
-  <widget class="QPushButton" name="btn_start">
+  <widget class="QPushButton" name="btn_open_camera">
    <property name="geometry">
     <rect>
-     <x>50</x>
-     <y>60</y>
-     <width>71</width>
-     <height>51</height>
+     <x>930</x>
+     <y>310</y>
+     <width>111</width>
+     <height>71</height>
     </rect>
    </property>
    <property name="text">
     <string>启动</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="btn_pause">
+  <widget class="QPushButton" name="btn_stop_grab">
    <property name="geometry">
     <rect>
-     <x>270</x>
-     <y>60</y>
-     <width>81</width>
-     <height>61</height>
+     <x>930</x>
+     <y>650</y>
+     <width>111</width>
+     <height>71</height>
     </rect>
    </property>
    <property name="text">
@@ -53,7 +53,7 @@
    <property name="geometry">
     <rect>
      <x>680</x>
-     <y>250</y>
+     <y>100</y>
      <width>54</width>
      <height>31</height>
     </rect>
@@ -65,9 +65,9 @@
   <widget class="QLabel" name="label_3">
    <property name="geometry">
     <rect>
-     <x>680</x>
-     <y>200</y>
-     <width>91</width>
+     <x>690</x>
+     <y>60</y>
+     <width>71</width>
      <height>31</height>
     </rect>
    </property>
@@ -78,8 +78,8 @@
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>40</x>
-     <y>240</y>
+     <x>60</x>
+     <y>110</y>
      <width>54</width>
      <height>31</height>
     </rect>
@@ -91,8 +91,8 @@
   <widget class="QPushButton" name="btn_sample_time">
    <property name="geometry">
     <rect>
-     <x>460</x>
-     <y>250</y>
+     <x>240</x>
+     <y>180</y>
      <width>121</width>
      <height>31</height>
     </rect>
@@ -104,20 +104,20 @@
   <widget class="QComboBox" name="format_list">
    <property name="geometry">
     <rect>
-     <x>137</x>
-     <y>191</y>
+     <x>157</x>
+     <y>61</y>
      <width>191</width>
      <height>27</height>
     </rect>
    </property>
    <item>
     <property name="text">
-     <string>YUY2</string>
+     <string>MJPG</string>
     </property>
    </item>
    <item>
     <property name="text">
-     <string>MJPG</string>
+     <string>YUY2</string>
     </property>
    </item>
   </widget>
@@ -125,9 +125,9 @@
    <property name="geometry">
     <rect>
      <x>920</x>
-     <y>120</y>
+     <y>170</y>
      <width>101</width>
-     <height>61</height>
+     <height>51</height>
     </rect>
    </property>
    <property name="text">
@@ -137,8 +137,8 @@
   <widget class="QPushButton" name="btn_rotate">
    <property name="geometry">
     <rect>
-     <x>940</x>
-     <y>210</y>
+     <x>930</x>
+     <y>60</y>
      <width>91</width>
      <height>71</height>
     </rect>
@@ -150,8 +150,8 @@
   <widget class="QLineEdit" name="input_degree">
    <property name="geometry">
     <rect>
-     <x>780</x>
-     <y>200</y>
+     <x>770</x>
+     <y>50</y>
      <width>131</width>
      <height>41</height>
     </rect>
@@ -161,9 +161,9 @@
    <property name="geometry">
     <rect>
      <x>70</x>
-     <y>320</y>
-     <width>891</width>
-     <height>531</height>
+     <y>310</y>
+     <width>761</width>
+     <height>491</height>
     </rect>
    </property>
    <property name="text">
@@ -176,8 +176,8 @@
   <widget class="QLabel" name="label_2">
    <property name="geometry">
     <rect>
-     <x>40</x>
-     <y>190</y>
+     <x>60</x>
+     <y>60</y>
      <width>91</width>
      <height>31</height>
     </rect>
@@ -189,8 +189,8 @@
   <widget class="QComboBox" name="camera_parameter">
    <property name="geometry">
     <rect>
-     <x>140</x>
-     <y>240</y>
+     <x>160</x>
+     <y>110</y>
      <width>191</width>
      <height>27</height>
     </rect>
@@ -204,7 +204,7 @@
   <widget class="QTextEdit" name="information_output">
    <property name="geometry">
     <rect>
-     <x>430</x>
+     <x>440</x>
      <y>40</y>
      <width>201</width>
      <height>121</height>
@@ -214,10 +214,10 @@
   <widget class="QPushButton" name="btn_close">
    <property name="geometry">
     <rect>
-     <x>150</x>
-     <y>60</y>
-     <width>81</width>
-     <height>51</height>
+     <x>930</x>
+     <y>410</y>
+     <width>111</width>
+     <height>71</height>
     </rect>
    </property>
    <property name="text">
@@ -227,10 +227,10 @@
   <widget class="QPushButton" name="btn_pan_flip">
    <property name="geometry">
     <rect>
-     <x>920</x>
-     <y>30</y>
+     <x>770</x>
+     <y>170</y>
      <width>101</width>
-     <height>61</height>
+     <height>51</height>
     </rect>
    </property>
    <property name="text">
@@ -240,8 +240,8 @@
   <widget class="QLineEdit" name="input_sample_time">
    <property name="geometry">
     <rect>
-     <x>460</x>
-     <y>200</y>
+     <x>60</x>
+     <y>180</y>
      <width>131</width>
      <height>41</height>
     </rect>
@@ -250,14 +250,27 @@
   <widget class="QPushButton" name="btn_information_inquire">
    <property name="geometry">
     <rect>
-     <x>700</x>
-     <y>70</y>
+     <x>490</x>
+     <y>180</y>
      <width>101</width>
-     <height>61</height>
+     <height>41</height>
     </rect>
    </property>
    <property name="text">
     <string>信息查询</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="btn_start_grab">
+   <property name="geometry">
+    <rect>
+     <x>930</x>
+     <y>530</y>
+     <width>111</width>
+     <height>71</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>开始抓取</string>
    </property>
   </widget>
  </widget>
