--- a/ui_camera_viewer.ui
+++ b/ui_camera_viewer.ui
@@ -6,30 +6,20 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1065</width>
-    <height>950</height>
+    <width>561</width>
+    <height>380</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <widget class="QLineEdit" name="input_scale">
-   <property name="geometry">
-    <rect>
-     <x>770</x>
-     <y>100</y>
-     <width>131</width>
-     <height>41</height>
-    </rect>
-   </property>
-  </widget>
   <widget class="QPushButton" name="btn_open_camera">
    <property name="geometry">
     <rect>
-     <x>930</x>
-     <y>310</y>
-     <width>111</width>
-     <height>71</height>
+     <x>440</x>
+     <y>130</y>
+     <width>81</width>
+     <height>41</height>
     </rect>
    </property>
    <property name="text">
@@ -39,75 +29,23 @@
   <widget class="QPushButton" name="btn_stop_grab">
    <property name="geometry">
     <rect>
-     <x>930</x>
-     <y>650</y>
-     <width>111</width>
-     <height>71</height>
+     <x>440</x>
+     <y>310</y>
+     <width>81</width>
+     <height>41</height>
     </rect>
    </property>
    <property name="text">
     <string>暂停</string>
    </property>
   </widget>
-  <widget class="QLabel" name="label_4">
-   <property name="geometry">
-    <rect>
-     <x>680</x>
-     <y>100</y>
-     <width>54</width>
-     <height>31</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>缩放比例</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_3">
-   <property name="geometry">
-    <rect>
-     <x>690</x>
-     <y>60</y>
-     <width>71</width>
-     <height>31</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>角度</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label">
-   <property name="geometry">
-    <rect>
-     <x>60</x>
-     <y>110</y>
-     <width>54</width>
-     <height>31</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>宽*高*FPS</string>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="btn_sample_time">
-   <property name="geometry">
-    <rect>
-     <x>240</x>
-     <y>180</y>
-     <width>121</width>
-     <height>31</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>设置采样时间(ms)</string>
-   </property>
-  </widget>
   <widget class="QComboBox" name="format_list">
    <property name="geometry">
     <rect>
-     <x>130</x>
-     <y>60</y>
-     <width>191</width>
-     <height>27</height>
+     <x>90</x>
+     <y>10</y>
+     <width>71</width>
+     <height>31</height>
     </rect>
    </property>
    <item>
@@ -121,49 +59,13 @@
     </property>
    </item>
   </widget>
-  <widget class="QPushButton" name="btn_tilt_flip">
+  <widget class="QLabel" name="image_window">
    <property name="geometry">
     <rect>
-     <x>920</x>
-     <y>170</y>
-     <width>101</width>
-     <height>51</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>垂直镜像</string>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="btn_rotate">
-   <property name="geometry">
-    <rect>
-     <x>930</x>
-     <y>60</y>
-     <width>91</width>
-     <height>71</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>旋转</string>
-   </property>
-  </widget>
-  <widget class="QLineEdit" name="input_degree">
-   <property name="geometry">
-    <rect>
-     <x>770</x>
-     <y>50</y>
-     <width>131</width>
-     <height>41</height>
-    </rect>
-   </property>
-  </widget>
-  <widget class="QLabel" name="pic1">
-   <property name="geometry">
-    <rect>
-     <x>70</x>
-     <y>310</y>
-     <width>761</width>
-     <height>491</height>
+     <x>80</x>
+     <y>120</y>
+     <width>321</width>
+     <height>241</height>
     </rect>
    </property>
    <property name="text">
@@ -176,23 +78,72 @@
   <widget class="QLabel" name="label_2">
    <property name="geometry">
     <rect>
-     <x>60</x>
-     <y>60</y>
-     <width>91</width>
+     <x>11</x>
+     <y>9</y>
+     <width>71</width>
      <height>31</height>
     </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>10</pointsize>
+    </font>
    </property>
    <property name="text">
     <string>传输格式</string>
    </property>
   </widget>
+  <widget class="QPushButton" name="btn_close_camera">
+   <property name="geometry">
+    <rect>
+     <x>440</x>
+     <y>190</y>
+     <width>81</width>
+     <height>41</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>停止</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="btn_start_grab">
+   <property name="geometry">
+    <rect>
+     <x>440</x>
+     <y>250</y>
+     <width>81</width>
+     <height>41</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>开始抓取</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label">
+   <property name="geometry">
+    <rect>
+     <x>180</x>
+     <y>10</y>
+     <width>81</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>10</pointsize>
+    </font>
+   </property>
+   <property name="text">
+    <string>宽*高*FPS</string>
+   </property>
+  </widget>
   <widget class="QComboBox" name="camera_parameter">
    <property name="geometry">
     <rect>
-     <x>130</x>
-     <y>110</y>
-     <width>191</width>
-     <height>27</height>
+     <x>280</x>
+     <y>10</y>
+     <width>141</width>
+     <height>31</height>
     </rect>
    </property>
    <item>
@@ -201,92 +152,74 @@
     </property>
    </item>
   </widget>
-  <widget class="QTextEdit" name="information_output">
-   <property name="geometry">
-    <rect>
-     <x>440</x>
-     <y>40</y>
-     <width>201</width>
-     <height>121</height>
-    </rect>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="btn_close">
-   <property name="geometry">
-    <rect>
-     <x>930</x>
-     <y>410</y>
-     <width>111</width>
-     <height>71</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>停止</string>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="btn_pan_flip">
-   <property name="geometry">
-    <rect>
-     <x>770</x>
-     <y>170</y>
-     <width>101</width>
-     <height>51</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>水平镜像</string>
-   </property>
-  </widget>
-  <widget class="QLineEdit" name="input_sample_time">
-   <property name="geometry">
-    <rect>
-     <x>60</x>
-     <y>180</y>
-     <width>131</width>
-     <height>41</height>
-    </rect>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="btn_information_inquire">
-   <property name="geometry">
-    <rect>
-     <x>490</x>
-     <y>180</y>
-     <width>101</width>
-     <height>41</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>信息查询</string>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="btn_start_grab">
-   <property name="geometry">
-    <rect>
-     <x>930</x>
-     <y>530</y>
-     <width>111</width>
-     <height>71</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>开始抓取</string>
-   </property>
-  </widget>
   <widget class="QPushButton" name="btn_parameter_set">
    <property name="geometry">
     <rect>
-     <x>330</x>
-     <y>80</y>
-     <width>91</width>
-     <height>31</height>
+     <x>440</x>
+     <y>10</y>
+     <width>81</width>
+     <height>41</height>
     </rect>
    </property>
    <property name="text">
     <string>设置参数</string>
    </property>
   </widget>
+  <widget class="QPushButton" name="btn_counterclockwise_90">
+   <property name="geometry">
+    <rect>
+     <x>30</x>
+     <y>70</y>
+     <width>71</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>左转90度</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="btn_clockwise_90">
+   <property name="geometry">
+    <rect>
+     <x>140</x>
+     <y>70</y>
+     <width>71</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>右转90度</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="btn_horizontal_flip">
+   <property name="geometry">
+    <rect>
+     <x>260</x>
+     <y>70</y>
+     <width>71</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>水平镜像</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="btn_vertical_flip">
+   <property name="geometry">
+    <rect>
+     <x>370</x>
+     <y>70</y>
+     <width>71</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>垂直镜像</string>
+   </property>
+  </widget>
  </widget>
- <resources/>
+ <resources>
+  <include location="../../../../../zjuxiaohui.qrc"/>
+ </resources>
  <connections/>
 </ui>
